cabal-version:       >=1.10

name:                tracker
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              sheepfleece
maintainer:          rowanmorrison@protonmail.ch
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable tracker
  main-is:             Main.hs
  other-modules:       
    Announce
    Config
    Database.Store
    Database.Tracker
    MetaFile
    Server
    Util.BEncode
    Util.Hash
    Util.Magnet
    Util.Utility
  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
  build-depends:       
      base >=4.12 && <4.13
    , aeson
    , attoparsec
    , blaze-builder
    -- , filepath-bytestring
    , bytestring
    , bytestring-strict-builder
    , classy-prelude-yesod
    , containers
    , cryptohash-sha1
    , filepath
    , heredoc
    , http-types
    , io-streams
    , mysql-haskell
    , network
    , persistent-sqlite
    , polysemy
    , shakespeare
    , text
    , time
    , timers
    , wai
    , yesod
    , yesod-auth
    , yesod-auth-oauth
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: 
    -Wall

    -- for now
    -Wno-name-shadowing
    -Wno-type-defaults
    -Wno-unused-imports
    -Wno-deprecations
